fix placeholder on mobile select box

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,3 @@
-ul.select2-selection__rendered li {
-    display: none !important;
-}
-
 html, body {
     font-family: "Noto Sans KR";
     height: 100%;
@@ -82,6 +78,17 @@ input.select-dropdown[type=text] {
     color: #5c6d85;
     -webkit-appearance: none;
     z-index: 12;
+}
+
+ul.select2-selection__rendered li {
+    display: none !important;
+}
+
+#selected-orgs-placeholder, #selected-years-placeholder {
+    color: #D1D1D1;
+    font-weight: 300;
+    position: absolute;
+    top: 10px;
 }
 
 .input-field.input-field-integrated > input[type=text] {
